Fix Layout bug

--- a/src/Components/CurrencyDisplay/style.scss
+++ b/src/Components/CurrencyDisplay/style.scss
@@ -58,6 +58,7 @@
       font-size: 32px;
       p {
         margin: 0;
+        line-height: 36px;
       }
     }
   }
